fixed footer links spacing, removing some padding from blog in main

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -9,3 +9,8 @@
 .horizontal-line {
   opacity: 20%;
 }
+
+.footer-links {
+  display: flex;
+  gap: 10px;
+}
