--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -35,5 +35,5 @@ h2 {
 }
 
 .filler {
-  padding-bottom: 250px;
+  padding-bottom: 150px;
 }
